
ChangeLog for jsrsasign

* Changes between 5.0.6 to 5.0.7 (2016-Mar-05)
  - tool_csr.html fix for subject parameter.
  - jsrsasign-latest-all-min wrong order in concatination.
    This raise wrong PKCS#5/8 encrypted PEM private key 
    generation in KEYUTIL.getPEM().
  - sample_node/asn1extract added

* Changes between 5.0.5 to 5.0.6 (2016-Feb-28)
  - bower.json name space fix
  - crypto-1.0 1.0.4 to 1.0.5
    - file removed
  - crypto-1.1 1.1.7 to 1.1.8
    - remove unnecessary evals for strict mode.

* Changes between 5.0.4 to 5.0.5
  - node sample 'jwssign', 'jwtverify', 'asn1dump'
    and 'pemtobin'  added.
  - base64x 1.1.5 to 1.1.6
    - license URL small fix
  - asn1 1.0.8 to 1.0.9
    - DERGeneralizedTime withMillis fix
    - DERGeneralizedTime and DERUTCTime refactoring
  - jws 3.3.2 to 3.3.3
    - JWS.parse method added
    - IntDate.getZulu UTCTime(YY) support added
  - jsrsasign-x.x.x-all-min.js move to lib directory from this version
  - jsrsasign-{1.2,1.2.1,1.3,1.3.1,2.0.0}.tgz are removed
    since they can get from github release/tags.

* Changes between 5.0.2 to 5.0.4 (2015-Nov-23)
  - jwtverify, asn1dump and pemtobin sample Node script in 
    sample_node directory. 
    There is a bower release but not in npm.

* Changes between 5.0.1 to 5.0.2 (2015-Nov-11)
  - jws 3.3.1 to 3.3.2
    - RFC 7638 getJWKthumbprint method added
  - base64x 1.1.5 to 1.1.6
    - function intarystrtohex added
  - nodeutil 1.0.0 newly added
    - utils for file I/O in Node.js
  - npm
    - add reference to intarystrtohex and CryptoJS

* Changes between 5.0.0 to 5.0.1 (2015-Oct-17)
  - keyutil 1.0.10 to 1.0.11
    - add support for bare RSA NED hexadecimal key in KEYUTIL.getKey

* Changes between 4.9.2 to 5.0.0 (2015-Oct-14)
  - *NOTICE* release 4.10.0 declined since API semver violation
  - some JWS HS* and Crypto Mac signature issue was fixed.
  - crypto 1.1.6 to 1.1.7
    - add support for various password providing method